apps/jellyfin/overlays/nishir-tailnet/patch-sts.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jellyfin
spec:
  template:
    spec:
      containers:
        - name: jellyfin
