apps/jellyfin/overlays/nishir-tailnet/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  annotations:
    tailscale.com/tags: tag:web
spec:
  defaultBackend:
    service:
      name: jellyfin
      port:
        name: https
  ingressClassName: tailscale
  tls:
    - hosts:
        - jellyfin
